# fastapi_app

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requests.http
environments/: config-example.ini  config.ini
migrations/: env.py
migrations/versions/: 08d4f9b96b7b_init.py  390474daabf1_allow_none_for_description_in_.py  70d8880272c2_init.py  da3d4bb101db_add_location_column_to_sightseeings.py
src/: main.py
src/configuration/: config.py
src/database/: db.py  models.py
src/dependency_injection/: di.py
src/repository/: sightseeings.py  sightseeings_repository.py  users.py
src/routes/: auth.py  sightseeings.py  sightseeings_routes.py
src/schemas/: schemas.py
src/services/: auth.py
tests/: conftest.py  test_di.py  test_repository.py  test_routes.py
