[project]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = [
    {name = "TosLICK",email = "anatosliy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
